--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,16 @@
-/.direnv/
-.stack-work
+# cabal
+dist
+dist-*
+cabal.project.local
+cabal.project.local~
 
+# nix
+result
+result-*
+
+# direnv
+.direnv
+
+# execution artifact
 sitemap.xml
 export.json
