--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,9 +3,8 @@
   // for the documentation about the extensions.json format
   "recommendations": [
     "haskell.haskell",
-    "arrterian.nix-env-selector",
     "bbenoist.nix",
     "jnoortheen.nix-ide",
-    "tamasfe.even-better-toml"
+    "mkhl.direnv"
   ]
 }
