--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,12 @@
 {
+  "search.useIgnoreFiles": true,
   "editor.formatOnSave": true,
-  // "nixEnvSelector.args": "--pure"
-
   "haskell.formattingProvider": "fourmolu",
   "haskell.manageHLS": "PATH",
   "[haskell]": {
     "editor.tabSize": 2,
     "editor.formatOnType": true
   },
-  "nixEnvSelector.suggestion": false
+  "nix.enableLanguageServer": true,
+  "nix.serverPath": "nixd"
 }
