--- a/emanote-sitemap-generator.cabal
+++ b/emanote-sitemap-generator.cabal
@@ -1,121 +1,77 @@
-cabal-version: 1.12
+cabal-version:      2.4
+name:               emanote-sitemap-generator
+version:            1.0.0
+license:            MIT
+synopsis:           Sitemap generator for Emanote
+author:             Gil Mendes
+maintainer:         gil00mendes@gmail.com
+build-type:         Simple
+extra-source-files:
+  LICENSE
+  README.md
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
---
--- see: https://github.com/sol/hpack
+common shared
+  ghc-options:
+    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
+    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
+    -fprint-explicit-foralls -fprint-explicit-kinds
 
-name:           emanote-sitemap-generator
-version:        1.0.0
-synopsis:       Sitemap generator for Emanote
-author:         Gil Mendes
-maintainer:     gil00mendes@gmail.com
-build-type:     Simple
+  mixins:
+    base hiding (Prelude),
+    relude (Relude as Prelude, Relude.Container.One),
+    relude
 
-library
-  exposed-modules:
-      Init
-  other-modules:
-      Paths_emanote_sitemap_generator
-  hs-source-dirs:
-      src
   default-extensions:
-      AutoDeriveTypeable
-      BangPatterns
-      BinaryLiterals
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DeriveDataTypeable
-      DeriveFoldable
-      DeriveFunctor
-      DeriveGeneric
-      DeriveTraversable
-      DoAndIfThenElse
-      EmptyDataDecls
-      ExistentialQuantification
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      GeneralizedNewtypeDeriving
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MonadFailDesugaring
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PartialTypeSignatures
-      PatternGuards
-      PolyKinds
-      RankNTypes
-      RecordWildCards
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeFamilies
-      TypeSynonymInstances
-      ViewPatterns
-  ghc-options: -Wall
+    BangPatterns
+    ConstraintKinds
+    DataKinds
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveLift
+    DeriveTraversable
+    DerivingStrategies
+    DerivingVia
+    EmptyCase
+    EmptyDataDecls
+    EmptyDataDeriving
+    ExistentialQuantification
+    ExplicitForAll
+    FlexibleContexts
+    FlexibleInstances
+    GADTSyntax
+    GeneralisedNewtypeDeriving
+    ImportQualifiedPost
+    KindSignatures
+    LambdaCase
+    MultiParamTypeClasses
+    MultiWayIf
+    NoStarIsType
+    NumericUnderscores
+    OverloadedStrings
+    PolyKinds
+    PostfixOperators
+    RankNTypes
+    ScopedTypeVariables
+    StandaloneDeriving
+    StandaloneKindSignatures
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeOperators
+    ViewPatterns
+
   build-depends:
-      aeson
-    , base
+    , aeson
+    , base          >=4   && <5
+    , relude        >=1.0
     , rio
     , sitemap-gen
-  default-language: Haskell2010
+
+  hs-source-dirs:     src
+  default-language:   Haskell2010
 
 executable emanote-sitemap-generator
-  main-is: Main.hs
-  other-modules:
-      Paths_emanote_sitemap_generator
-  hs-source-dirs:
-      app
-  default-extensions:
-      AutoDeriveTypeable
-      BangPatterns
-      BinaryLiterals
-      ConstraintKinds
-      DataKinds
-      DefaultSignatures
-      DeriveDataTypeable
-      DeriveFoldable
-      DeriveFunctor
-      DeriveGeneric
-      DeriveTraversable
-      DoAndIfThenElse
-      EmptyDataDecls
-      ExistentialQuantification
-      FlexibleContexts
-      FlexibleInstances
-      FunctionalDependencies
-      GADTs
-      GeneralizedNewtypeDeriving
-      InstanceSigs
-      KindSignatures
-      LambdaCase
-      MonadFailDesugaring
-      MultiParamTypeClasses
-      MultiWayIf
-      NamedFieldPuns
-      NoImplicitPrelude
-      OverloadedStrings
-      PartialTypeSignatures
-      PatternGuards
-      PolyKinds
-      RankNTypes
-      RecordWildCards
-      ScopedTypeVariables
-      StandaloneDeriving
-      TupleSections
-      TypeFamilies
-      TypeSynonymInstances
-      ViewPatterns
-  build-depends:
-      aeson
-    , base
-    , emanote-sitemap-generator
-    , rio
-    , sitemap-gen
-  default-language: Haskell2010
+  import: shared
+  main-is:            Main.hs
